Fix margin of buttons on homepage on small displays

--- a/src/styles/layouts/container--home.scss
+++ b/src/styles/layouts/container--home.scss
@@ -323,6 +323,10 @@
 
         .links {
             flex-direction: column;
+
+            .button {
+                margin: 0.2em 0;
+            }
         }
     }
     
